Fixed accordion padding on small devices

--- a/src/scss/components/_skincare.scss
+++ b/src/scss/components/_skincare.scss
@@ -196,7 +196,7 @@
     position: relative;
 
     @media only screen and (max-width: $md) {
-        padding: 15px 20px 15px 35px;
+        padding: 12px 20px 12px 35px;
     }
 
     &::before {
